--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -3,18 +3,6 @@
   height: calc(100vh - 6.5rem);
   overflow-y: scroll;
 
-  &::webkit-scrollbar {
-    width: 0.25rem;
-  }
-
-  &::webkit-scrollbar-track {
-    background: var(--gray-800);
-  }
-
-  &::webkit-scrollbar-thumb {
-    background: var(--gray-500);
-  }
-
   h2 {
     margin-top: 3rem;
     margin-bottom: 1.5rem;   
@@ -198,7 +186,9 @@
 
 @media screen and (max-width: 1200px) {
   .homepage {
+    height: auto;
     padding: 0 3rem;
+    overflow-y: hidden;
   }
 }
 
