--- a/src/pages/podcasts/podcast.module.scss
+++ b/src/pages/podcasts/podcast.module.scss
@@ -48,7 +48,7 @@
 
     header {
         padding-bottom: 1rem;
-        border-bottom: 1px solid var(--gray-100)
+        border-bottom: 1px solid var(--gray-100);
 
         h1 {
           margin-top: 2rem;
@@ -89,4 +89,54 @@
         margin: 1.5rem 0;
       }
     }
+}
+
+@media screen and (max-width: 1200px) {
+  .podcastContainer {
+    height: auto;
+    overflow-y: hidden;
+  }
+
+  .podcast {
+    .thumbnailContainer {
+      //min-height: 10rem;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  
+  .podcast {
+    padding: 1.5rem 2rem;
+  
+    header {
+
+      h1 {
+        margin-top: 1rem;
+        margin-bottom: 0.75rem;
+        font-size: 1.625rem;
+      }
+
+      span {
+        line-height: 1.5em;
+      }
+
+      span:first-of-type {
+        display: block;
+      }
+
+      span:nth-child(3) {
+        padding-left: 0;
+        margin-left: 0;
+        
+        &::before {
+          content: none;
+
+        }
+      }
+
+    }
+  }
+
+
 }
